# AIDA_U2_Network

./: .gitignore  pyproject.toml  readme.md  requirements.txt
examples/: demos.py
src/: ai_detector.py  config.py  segmenter.py
src/AIDA_Network/: __init__.py  ai_detector.py  segmenter.py  utils.py
u2net_segmenter/: __init__.py  config.py  utils.py
